aggiunta navbar ad app component

--- a/CoreWeb-SPA/src/app/app.component.html
+++ b/CoreWeb-SPA/src/app/app.component.html
@@ -1,6 +1,5 @@
-<div>
-  <h1>
-    Core Web App!
-  </h1>
-  <app-value></app-value>
-</div>
+<app-nav></app-nav>
+<h1>
+  Core Web App!
+</h1>
+<app-value></app-value>
