--- a/CoreWeb-SPA/src/app/register/register.component.html
+++ b/CoreWeb-SPA/src/app/register/register.component.html
@@ -10,6 +10,13 @@
     <input type="password" class="form-control" required name="password" placeholder="Password" [(ngModel)]="model.password">
   </div>
 
+  <div class="form-group">
+    <label for="favouriteValue">What is your favourite value?</label>
+    <select id="favouriteValue" class="form-control">
+      <option *ngFor="let value of valuesFromHome"  [value]="value">{{value.name}}</option>
+    </select>
+  </div>
+
   <div class="form-group text-center">
     <button class="btn btn-success" type="submit">Register</button>
     <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
