--- a/CoreWeb-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/CoreWeb-SPA/src/app/members/member-detail/member-detail.component.html
@@ -47,7 +47,12 @@
             <p>{{ user.interests }}</p>
           </tab>
           <tab heading="Photos">
-            <p>Photos will go here</p>
+            <ngx-gallery
+              style="display: inline-block; margin-bottom: 20px;"
+              [options]="galleryOptions"
+              [images]="galleryImages"
+              class="ngx-gallery"
+            ></ngx-gallery>
           </tab>
           <tab heading="Messages">
             <p>Messages go here</p>
