--- a/CoreWeb-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/CoreWeb-SPA/src/app/members/member-edit/member-edit.component.html
@@ -4,11 +4,9 @@
       <h1>Your Profile</h1>
     </div>
     <div class="col-sm-8">
-      <div class="alert alert-info">
-        <p>
-          <strong>Information:</strong> You have made changes. Any unsaved
-          changes will be lost!
-        </p>
+      <div class="alert alert-info" *ngIf="editForm.dirty">
+        <strong>Information:</strong> You have made changes. Any unsaved changes
+        will be lost!
       </div>
     </div>
   </div>
@@ -47,7 +45,7 @@
       <div class="tab-panel">
         <tabset class="member-tabset">
           <tab heading="Edit Profile">
-            <form>
+            <form #editForm="ngForm" (ngSubmit)="updateUser()">
               <h4>Description</h4>
               <textarea
                 name="introduction"
