--- a/CoreWeb-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/CoreWeb-SPA/src/app/members/member-edit/member-edit.component.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="card-footer">
-          <button class="btn btn-success btn-block">Save Changes</button>
+          <button [disabled]="!editForm.dirty" class="btn btn-success btn-block">Save Changes</button>
         </div>
       </div>
     </div>
