--- a/CoreWeb-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/CoreWeb-SPA/src/app/members/member-edit/member-edit.component.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="card-footer">
-          <button [disabled]="!editForm.dirty" class="btn btn-success btn-block">Save Changes</button>
+          <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save Changes</button>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
       <div class="tab-panel">
         <tabset class="member-tabset">
           <tab heading="Edit Profile">
-            <form #editForm="ngForm" (ngSubmit)="updateUser()">
+            <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
               <h4>Description</h4>
               <textarea
                 name="introduction"
