--- a/CoreWeb-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/CoreWeb-SPA/src/app/members/member-edit/member-edit.component.html
@@ -93,10 +93,13 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <app-photo-editor [photos]="user.photos"></app-photo-editor>
+            <app-photo-editor
+              [photos]="user.photos"
+              (getMemberPhotoChange)="updateMainPhoto($event)"
+            ></app-photo-editor>
           </tab>
         </tabset>
       </div>
-    </div> 
+    </div>
   </div>
 </div>
