--- a/CoreWeb-SPA/src/app/nav/nav.component.html
+++ b/CoreWeb-SPA/src/app/nav/nav.component.html
@@ -18,7 +18,7 @@
 
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
       <span class="mr-1">
-        <img src="{{ authService.currentUser.photoUrl }}" alt="" />
+        <img src="{{ photoUrl }}" alt="" />
       </span>
 
       <a class="dropdown-toggle text-light" dropdownToggle (click)="(false)">
